# ParticleSim

./: .gitignore  AGENT.md  CLAUDE.md  CODEBASE_ANALYSIS.md  Cargo.toml  Cargo.toml.backup  IMPLEMENTATION_FIXES.md  LTO_INVESTIGATION_PROMPT.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATIONS.md  PLOTTING_FEATURES.md  README.md  REALISTIC_Z_FORCES.md  SCREEN_CAPTURE.md  THERMAL_FORCE_BALANCE_FIXES.md  build.rs  debug_graphics.rs  debug_out_of_plane.rs  examples_migration.toml  fresh-build.bat  fresh-build.ps1  init_config.toml  manual_measurements_eight_offset.toml  memory_analysis.rs  rust_out  single_measurement.toml  switch_charging_study.toml  test_config.rs  thermo_force_bootstrap.txt  thermostat_test_fixed.txt  verify_config.rs
.continue/rules/: coding-standards.md  common-tasks.md  dependencies.md  physics-model.md  project-architecture.md  species-reference.md
coordination/: PROTOCOL.md  north_jobs.jsonl  north_to_south.jsonl  south_status.jsonl  south_to_north.jsonl
debug/: README.md  analyze_history_growth.rs  calibration_analysis.rs  check_coulomb.rs  check_new_coulomb.rs  corrected_domain_calc.rs  current_density_analysis.rs  debug_field_alignment_scaling.rs  debug_forces.rs  debug_graphics.rs  debug_out_of_plane.rs  density_calculation.rs  density_physics_check.rs  detect_sawtooth_pattern.rs  diagnose_slowdown.rs  force_balance_analysis.rs  minimal_test.rs  optimized_domain_calc.rs  pinpoint_bottleneck.rs  practical_density.rs  proper_2d_density.rs  reproduce_gui_slowdown.rs  resolve_contradiction.rs  rigorous_domain_calc.rs  temperature_units_analysis.rs  temperature_verification.rs  test_frustration.rs  test_history_isolation.rs  test_negative_current.rs  test_user_scenarios.rs  thermal_balance_simple.rs  timestep_analysis.rs  toml_density_analysis.rs  unit_thickness_analysis.rs  verify_config.rs
docs/: AGENT.md  CODE_CLEANUP.md  DOE_GUIDE.md  DOMAIN_GUI_SYNC_FIX.md  EIS_AMPLITUDE_STUDY_PLAN.md  EIS_DCR_PULSE_PLAN.md  EIS_PHASE_1_3_VALIDATION.md  EIS_PHASE_5_AMPLITUDE_MAP.md  ELECTRODE_MATERIALS_PLAN.md  PHASE_4_MORPHOLOGY_VALIDATION.md  PHYSICS_PARAMETER_INVENTORY.md  PHYSICS_VALIDATION_PLAN.md  REVIEW_SUMMARY.md  SOLVATION_PARAMETER_REVIEW.md  THERMOSTAT_AND_VOID_INVESTIGATION.md  eis_amplitude_floor.md  eis_similitude.md  physics.md
docs/archive/: ELECTROLYTE_FEATURE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  physics.md
docs/perf/: README.md  lto-build-matrix.csv  runtime-benchmarks.csv
doe_results/: potentiostatic_replicate_05.csv  potentiostatic_replicate_07.csv  potentiostatic_replicate_09.csv  ss_replicate_01.csv  ss_replicate_02.csv  ss_replicate_03.csv  ss_replicate_05.csv  ss_replicate_06.csv  ss_replicate_07.csv  ss_replicate_09.csv
doe_results/300 T/: Foil-based_CONV_CC_0p00_300T.csv  Point-based_CONV_CC_0p00_300T.csv  Time-based_CONV_CC_0p00_300T.csv
doe_results/Bri_Result/: Measurement_CONV_CC_0p01.csv  Measurement_CONV_CC_0p02.csv  Measurement_SWITCH_CC_0p04_1000.csv  Measurement_SWITCH_CC_0p04_2000.csv  Measurement_SWITCH_CC_0p04_500.csv  solvation_CONV_0p01.csv  solvation_CONV_0p02.csv  solvation_SWITCH_0p04_2000.csv
doe_results/Molarity/: Foil-based_SWITCH_CC_0p04_1000_0p5M.csv  Point-based_SWITCH_CC_0p04_1000_0p5M.csv  Time-based_CONV_CC_0p02_1M.csv  Time-based_SWITCH_CC_0p04_1000_0p5M.csv
doe_results/Molarity_v2/: Foil-based_CONV_CC_0p02_0p08M.csv  Foil-based_SWITCH_CC_0p04_1000_1p5M.csv  Foil-based_SWITCH_CC_0p04_2000_0p5M.csv  Foil-based_SWITCH_CC_0p04_2000_1p5M.csv  Foil-based_SWITCH_CC_0p04_500_1p5M.csv  Point-based_CONV_CC_0p02_0p08M.csv  Point-based_SWITCH_CC_0p04_1000_1p5M.csv  Point-based_SWITCH_CC_0p04_2000_0p5M.csv  Point-based_SWITCH_CC_0p04_2000_1p5M.csv  Point-based_SWITCH_CC_0p04_500_1p5M.csv  Time-based_CONV_CC_0p02_0p08M.csv  Time-based_SWITCH_CC_0p04_1000_1p5M.csv  Time-based_SWITCH_CC_0p04_2000_0p5M.csv  Time-based_SWITCH_CC_0p04_2000_1p5M.csv  Time-based_SWITCH_CC_0p04_500_1p5M.csv
doe_results/Switch_Charging_Study/: CONV_OP0.7.csv
doe_results/bench/: results.csv
doe_results/e0_steady_state/: potentiostatic_replicate_01.csv  potentiostatic_replicate_02.csv  potentiostatic_replicate_03.csv  potentiostatic_replicate_04.csv  potentiostatic_replicate_06.csv  potentiostatic_replicate_08.csv  potentiostatic_replicate_10.csv  ss_replicate_04.csv  ss_replicate_08.csv  ss_replicate_10.csv
doe_results/e1_baseline_dcr/: e1_baseline_02.csv  e1_baseline_04.csv  e1_baseline_08.csv  e1_baseline_12.csv  e1_baseline_15.csv  e1_baseline_20.csv  e1_baseline_24.csv  e1_baseline_25.csv  e1_baseline_30.csv
doe_results/e2_repeatability/: e2_01.csv  e2_02.csv  e2_03.csv  e2_04.csv  e2_05.csv  e2_06.csv  e2_07.csv  e2_08.csv  e2_09.csv  e2_10.csv  e2_11.csv  e2_12.csv  e2_13.csv  e2_14.csv  e2_15.csv  e2_16.csv  e2_17.csv  e2_18.csv  e2_19.csv  e2_20.csv  e2_21.csv  e2_22.csv  e2_23.csv  e2_24.csv  e2_25.csv  e2_26.csv  e2_27.csv  (+6 more)
logs/: thermostat_bootstrap_log.txt  thermostat_log.txt
measurement_configs/: bulk_electrolyte.toml  eis_validation_flat_symmetric.toml  manual_measurements.toml  manual_measurements_eight.toml  manual_measurements_five.toml
scripts/: _south_run.sh  build_per_run_index.py  codegraph_build.py  codegraph_render.py  dcr_amplitude_compare.py  dcr_decomp.py  drive_sweep.py  fit_dcr_2rc.py  messaging_server.py  messaging_token.py  morphology_grid_doe.py  msd_plot.py  msd_plot_long.py  north_p2p.sh  perf_harness.rs  plot_deep_case.py  plot_eis_master.py  plot_eis_master_interactive.py  plot_eis_summary.py  plot_eis_timeseries.py  plot_invariant.py  plot_morphology_demo.py  plot_regime_map.py  run_invariants.sh  run_job.sh  runtime_probe.rs  scan_eis_timeseries.py  south_controller.py  status_table.py  test_sign_convention.py
src/: body.rs  cell_list.rs  commands.rs  config.rs  diagnostics.rs  foil.rs  init_config.rs  io.rs  lib.rs  main.rs  manual_measurement.rs  manual_measurement_filename.rs  measurement_csv.rs  profiler.rs  quadtree.rs  renderer.rs  renderer_utils.rs  scenario.rs  simulation.rs  species.rs  species_properties.rs  units.rs  utils.rs
tests/: eis_validation_runs.rs
(+1895 files in other folders)
