[package]
name = "particle_sim"
version = "0.1.5"
edition = "2021"

[[bin]]
name = "particle_sim"
path = "src/main.rs"

[[bin]]
name = "debug_out_of_plane"
path = "debug/debug_out_of_plane.rs"

[[bin]]
name = "verify_config"
path = "debug/verify_config.rs"

[[bin]]
name = "minimal_test"
path = "debug/minimal_test.rs"

[[bin]]
name = "debug_graphics"
path = "debug/debug_graphics.rs"

[[bin]]
name = "toml_density_analysis"
path = "debug/toml_density_analysis.rs"

[dependencies]
quarkstrom = { path = "../deps/quarkstrom" }

ultraviolet = { version = "0.9.2", features = ["serde"] }
fastrand = "2.1.1"
broccoli = "6.3.0"
palette = "0.7.6"

parking_lot = "0.12.3"
once_cell = "1.20.1"

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
toml = "0.8"

# Screen capture dependencies
image = "0.25.2"
chrono = { version = "0.4.38", features = ["serde"] }
screenshots = "0.7.3"

# Windows API for window position detection
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "wingdi"] }
screenshots = "0.7"

rayon = "1.10.0"
crossbeam = "0.8.4"
broccoli-rayon = "0.4.0"
rand = "0.9.1"
rand_distr = "0.4"
smallvec = { version = "1.10.0", features = ["serde"] }

[features]
profiling = []
debug_quadtree = []
