[package]
name = "particle_sim"
version = "0.1.5"
edition = "2021"
build = "build.rs"

[package.metadata]
# Commands for fresh dependency management
commands = [
    "clean",
    "build --release"
]

[[bin]]
name = "particle_sim"
path = "src/main.rs"

[[bin]]
name = "debug_out_of_plane"
path = "debug/debug_out_of_plane.rs"

[[bin]]
name = "verify_config"
path = "debug/verify_config.rs"

[[bin]]
name = "minimal_test"
path = "debug/minimal_test.rs"

[[bin]]
name = "diagnose_slowdown"
path = "debug/diagnose_slowdown.rs"

[[bin]]
name = "test_history_isolation"
path = "debug/test_history_isolation.rs"

[[bin]]
name = "analyze_history_growth"
path = "debug/analyze_history_growth.rs"

[[bin]]
name = "debug_graphics"
path = "debug/debug_graphics.rs"

[[bin]]
name = "pinpoint_bottleneck"
path = "debug/pinpoint_bottleneck.rs"

[[bin]]
name = "reproduce_gui_slowdown"
path = "debug/reproduce_gui_slowdown.rs"

[[bin]]
name = "test_user_scenarios"
path = "debug/test_user_scenarios.rs"

[[bin]]
name = "detect_sawtooth_pattern"
path = "debug/detect_sawtooth_pattern.rs"

[[bin]]
name = "toml_density_analysis"
path = "debug/toml_density_analysis.rs"

[[bin]]
name = "debug_field_alignment_scaling"
path = "debug/debug_field_alignment_scaling.rs"

[dependencies]
quarkstrom = { path = "../quarkstrom/quarkstrom" }

ultraviolet = { version = "0.9.2", features = ["serde"] }
fastrand = "2.1.1"
broccoli = "6.3.0"
palette = "0.7.6"

parking_lot = "0.12.3"
once_cell = "1.20.1"

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
toml = "0.8"

# Screen capture dependencies
chrono = { version = "0.4.38", features = ["serde"] }
image = "0.25.2"
screenshots = "0.7.3"

# Additional dependencies  
rayon = "1.10.0"
crossbeam = "0.8.4"
broccoli-rayon = "0.4.0"
rand = "0.9.1"
rand_distr = "0.4"
smallvec = { version = "1.10.0", features = ["serde"] }

# Windows API for window position detection
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "wingdi"] }
screenshots = "0.7"

# For dependency management
[build-dependencies]
# No build dependencies needed currently

[profile.dev]
# Development profile optimizations for faster builds with dependencies
incremental = true

[profile.release]
# Release profile with parallel compilation
lto = "thin"  # Thin LTO - faster compile than full LTO, still good optimization
codegen-units = 16  # Use parallel codegen units for faster compilation

[features]
profiling = []
debug_quadtree = []
