[package]
name = "particle_sim"
version = "0.1.5"
edition = "2021"
build = "build.rs"

[package.metadata]
# Commands for fresh dependency management
commands = [
    "clean",
    "build --release"
]

[lib]
name = "particle_sim"
path = "src/lib.rs"

[[bin]]
name = "particle_sim"
path = "src/main.rs"

[[bin]]
name = "debug_out_of_plane"
path = "debug/debug_out_of_plane.rs"
required-features = ["debug_bins"]

[[bin]]
name = "verify_config"
path = "debug/verify_config.rs"
required-features = ["debug_bins"]

[[bin]]
name = "minimal_test"
path = "debug/minimal_test.rs"
required-features = ["debug_bins"]

[[bin]]
name = "diagnose_slowdown"
path = "debug/diagnose_slowdown.rs"
required-features = ["debug_bins"]

[[bin]]
name = "test_history_isolation"
path = "debug/test_history_isolation.rs"
required-features = ["debug_bins"]

[[bin]]
name = "analyze_history_growth"
path = "debug/analyze_history_growth.rs"
required-features = ["debug_bins"]

[[bin]]
name = "debug_graphics"
path = "debug/debug_graphics.rs"
required-features = ["debug_bins"]

[[bin]]
name = "pinpoint_bottleneck"
path = "debug/pinpoint_bottleneck.rs"
required-features = ["debug_bins"]

[[bin]]
name = "reproduce_gui_slowdown"
path = "debug/reproduce_gui_slowdown.rs"
required-features = ["debug_bins"]

[[bin]]
name = "test_user_scenarios"
path = "debug/test_user_scenarios.rs"
required-features = ["debug_bins"]

[[bin]]
name = "detect_sawtooth_pattern"
path = "debug/detect_sawtooth_pattern.rs"
required-features = ["debug_bins"]

[[bin]]
name = "toml_density_analysis"
path = "debug/toml_density_analysis.rs"
required-features = ["debug_bins"]

[[bin]]
name = "debug_field_alignment_scaling"
path = "debug/debug_field_alignment_scaling.rs"
required-features = ["debug_bins"]

[[bin]]
name = "doe_runner"
path = "src/bin/doe_runner.rs"
required-features = ["doe"]

[[bin]]
name = "debug_measurements"
path = "src/bin/debug_measurements.rs"
required-features = ["debug_bins"]

[dependencies]
quarkstrom = { path = "../quarkstrom/quarkstrom" }

ultraviolet = { version = "0.9.2", features = ["serde"] }
fastrand = "2.1.1"
broccoli = "6.3.0"
palette = "0.7.6"

parking_lot = "0.12.3"
once_cell = "1.20.1"

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
toml = "0.8"
flate2 = { version = "1.1" }
bincode = "1.3"

 # Screen capture dependencies removed

# Additional dependencies  
rayon = "1.10.0"
crossbeam = "0.8.4"
broccoli-rayon = "0.4.0"
rand = "0.9.1"
rand_distr = "0.4"
smallvec = { version = "1.10.0", features = ["serde"] }

# Windows API for window position detection
#[target.'cfg(windows)'.dependencies]

# For dependency management
[build-dependencies]
# No build dependencies needed currently

[profile.dev]
# Development profile optimizations for faster builds with dependencies
incremental = true

[profile.release]
# Release profile with parallel compilation
lto = "thin"  # Thin LTO - faster compile than full LTO, still good optimization
codegen-units = 16  # Use parallel codegen units for faster compilation

[features]
profiling = []
debug_quadtree = []
thermostat_debug = []
command_debug = []
doe = []
unit_tests = []
debug_bins = []
